--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,6 +52,9 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.debug
+
+            minifyEnabled false
+            shrinkResources false
         }
     }
 
