--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,6 @@ dependencies:
   dio: ^5.4.0
   dio_cache_interceptor: ^3.5.0
   dio_cache_interceptor_hive_store: ^3.2.2
-  google_fonts: ^6.1.0
   flutter_modular: ^6.3.2
   flutter_mobx: ^2.2.0
   flutter_svg: ^2.0.9
@@ -29,13 +28,17 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   build_runner: ^2.4.7
   flutter_lints: ^2.0.0
   mobx_codegen: ^2.4.0
+  mocktail: ^1.0.3
 
 flutter:
   uses-material-design: true
+  fonts:
+    - family: Asap
+      fonts:
+        - asset: assets/fonts/Asap.ttf
 
   assets:
     - assets/
